crates/parser/test_files/errors/duplicated_declaration.sntn
target = "evm-ethereum-cancun"

global private const i256 $ZERO = 0
global public const *i256 $ZERO = 0

func private %foo(v0.i32) {
    block0:
        return;
}

func private %foo(v0.i256) {
    block0:
        return;
}
